# karaoke-webview

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: architecture-vision.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  media_library.rs
src-tauri/src/capture/: backend.rs  levels.rs  manager.rs  mod.rs  models.rs  tests.rs  windows.rs
src-tauri/src/capture/monitor/: manager.rs  mod.rs  models.rs  output.rs  queue.rs  tests.rs
src-tauri/src/development_pairing/: coordinator.rs  mod.rs  models.rs  tests.rs
src-tauri/src/development_protocol/: address.rs  audio_handoff.rs  jitter.rs  manager.rs  mod.rs  models.rs  packet.rs
src-tauri/src/lyric_timing_preferences/: mod.rs  models.rs  persistence.rs  tests.rs
src-tauri/src/lyrics/: mod.rs  models.rs  parser.rs  tests.rs  timing.rs
src-tauri/src/media_library/: mod.rs  models.rs  persistence.rs  playback.rs  refresh.rs  scanner.rs  tests.rs
src-tauri/src/microphones/: assignment_registry.rs  automatic_assignment.rs  channel_registry.rs  discovery.rs  mod.rs  models.rs  performance_readiness.rs  recovery.rs  tests.rs  windows.rs
src-tauri/src/participant_commit/: coordinator.rs  mod.rs  models.rs  tests.rs
src-tauri/src/performance/: coordinator.rs  mod.rs  models.rs  tests.rs
src-tauri/src/playback/: coordinator.rs  mod.rs  models.rs  tests.rs
src-tauri/src/queue/: coordinator.rs  mod.rs  models.rs  tests.rs
src-tauri/src/session_singers/: mod.rs  models.rs  registry.rs  tests.rs
(+157 files in other folders)
