[package]
name = "karaoke-webview"
version = "0.1.0"
description = "Windows desktop karaoke foundation built with Tauri."
authors = ["Karaoke Webview contributors"]
edition = "2021"

[lib]
name = "karaoke_webview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }

[dev-dependencies]
tempfile = "3"
